--- a/dev-libs/xmlsec/ChangeLog
+++ b/dev-libs/xmlsec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xmlsec
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlsec/ChangeLog,v 1.2 2004/05/26 14:18:13 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/xmlsec/ChangeLog,v 1.3 2004/06/18 04:14:49 weeve Exp $
+
+  17 Jun 2004; Jason Wever <weeve@gentoo.org> xmlsec-1.2.5.ebuild:
+  Added ~sparc keyword.
 
 *xmlsec-1.2.5 (26 May 2004)
 
