--- a/media-plugins/xmms-liveice/ChangeLog
+++ b/media-plugins/xmms-liveice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-liveice
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-liveice/Attic/ChangeLog,v 1.2 2004/04/20 17:54:23 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-liveice/Attic/ChangeLog,v 1.3 2004/06/18 04:54:32 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-liveice-1.0.0.ebuild:
+  gnuconfig update for ~amd64 addition.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-liveice-1.0.0.ebuild:
