--- a/media-plugins/xmms-alarm/ChangeLog
+++ b/media-plugins/xmms-alarm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-alarm
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-alarm/Attic/ChangeLog,v 1.9 2004/06/10 18:04:28 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-alarm/Attic/ChangeLog,v 1.10 2004/06/18 05:57:44 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-alarm-0.3.6.ebuild:
+  Added to ~amd64.
 
 *xmms-alarm-0.3.6 (10 Jun 2004)
 
