--- a/media-plugins/xmms-gdancer/ChangeLog
+++ b/media-plugins/xmms-gdancer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-gdancer
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-gdancer/Attic/ChangeLog,v 1.7 2004/04/20 17:52:39 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-gdancer/Attic/ChangeLog,v 1.8 2004/06/18 06:05:04 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-gdancer-0.4.6.ebuild:
+  Added to ~amd64.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-gdancer-0.4.5.ebuild:
