--- a/media-plugins/xmms-jess/ChangeLog
+++ b/media-plugins/xmms-jess/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-jess
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jess/Attic/ChangeLog,v 1.5 2004/04/20 17:53:49 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jess/Attic/ChangeLog,v 1.6 2004/06/18 06:05:32 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-jess-2.9.1.ebuild:
+  Added to ~amd64.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-jess-2.9.1.ebuild:
