--- a/media-plugins/xmms-liveplugin/ChangeLog
+++ b/media-plugins/xmms-liveplugin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-liveplugin
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-liveplugin/Attic/ChangeLog,v 1.3 2004/04/22 06:24:34 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-liveplugin/Attic/ChangeLog,v 1.4 2004/06/18 06:10:01 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-liveplugin-0.2.5.ebuild:
+  Added to ~amd64.
 
   21 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-liveplugin-0.2.5.ebuild:
