--- a/media-plugins/xmms-dscope/ChangeLog
+++ b/media-plugins/xmms-dscope/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-dscope
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-dscope/Attic/ChangeLog,v 1.8 2004/04/22 06:20:08 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-dscope/Attic/ChangeLog,v 1.9 2004/06/18 06:20:07 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-dscope-1.3.1.ebuild:
+  Stable amd64.
 
   21 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-dscope-1.2.ebuild, xmms-dscope-1.3.1.ebuild:
