--- a/media-plugins/xmms-infinity/ChangeLog
+++ b/media-plugins/xmms-infinity/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-infinity
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-infinity/Attic/ChangeLog,v 1.7 2004/05/20 20:12:04 kugelfang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-infinity/Attic/ChangeLog,v 1.8 2004/06/18 06:20:36 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-infinity-0.2.ebuild:
+  Stable amd64.
 
   20 May 2004; Danny van Dyk <kugelfang@gentoo.org> xmms-infinity-0.2.ebuild:
   Added gnuconfig_update and marked ~amd64. Fixes BUG #51439.
