--- a/media-plugins/xmms-iris/ChangeLog
+++ b/media-plugins/xmms-iris/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-iris
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-iris/Attic/ChangeLog,v 1.6 2004/04/20 17:53:17 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-iris/Attic/ChangeLog,v 1.7 2004/06/18 06:21:04 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-iris-0.11.ebuild:
+  Stable amd64.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-iris-0.10.ebuild, xmms-iris-0.11.ebuild:
