--- a/media-plugins/xmms-mad/ChangeLog
+++ b/media-plugins/xmms-mad/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-mad
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-mad/Attic/ChangeLog,v 1.17 2004/06/15 17:19:07 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-mad/Attic/ChangeLog,v 1.18 2004/06/18 06:26:15 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  xmms-mad-0.5.6-r1.ebuild:
+  Stable amd64.
 
   15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
   xmms-mad-0.5.6-r1.ebuild:
