--- a/media-libs/musicbrainz/ChangeLog
+++ b/media-libs/musicbrainz/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/musicbrainz
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.30 2004/06/18 06:27:04 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.31 2004/06/18 06:49:58 eradicator Exp $
+
+  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  musicbrainz-2.0.2-r2.ebuild:
+  Running auto* tools to fix a problem discussed in bug #54009.
 
   17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
   musicbrainz-2.1.1.ebuild:
