--- a/media-plugins/vco-plugins/ChangeLog
+++ b/media-plugins/vco-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vco-plugins
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vco-plugins/ChangeLog,v 1.4 2004/06/15 19:23:03 fvdpol Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vco-plugins/ChangeLog,v 1.5 2004/06/18 20:18:48 dholm Exp $
+
+  18 Jun 2004; David Holm <dholm@gentoo.org> vco-plugins-0.3.0.ebuild:
+  Added to ~ppc.
 
 *vco-plugins-0.3.0 (15 Jun 2004)
 
