--- a/media-plugins/xmms-wakeup/ChangeLog
+++ b/media-plugins/xmms-wakeup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/xmms-wakeup
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-wakeup/Attic/ChangeLog,v 1.1 2004/06/17 03:05:36 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-wakeup/Attic/ChangeLog,v 1.2 2004/06/18 20:22:05 dholm Exp $
+
+  18 Jun 2004; David Holm <dholm@gentoo.org> xmms-wakeup-0.15.ebuild:
+  Added to ~ppc.
 
 *xmms-wakeup-0.15 (16 Jun 2004)
 
