--- a/net-news/slrn/ChangeLog
+++ b/net-news/slrn/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-news/slrn
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/slrn/Attic/ChangeLog,v 1.16 2004/06/18 18:30:56 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/slrn/Attic/ChangeLog,v 1.17 2004/06/19 01:56:49 swegener Exp $
+
+  19 Jun 2004; Sven Wegener <swegener@gentoo.org> slrn-0.9.7.4-r1.ebuild,
+  slrn-0.9.7.4.ebuild, slrn-0.9.8.0.ebuild:
+  Removed S=${WORKDIR}/${P}
 
 *slrn-0.9.8.0-r1 (18 Jun 2004)
 
