--- a/net-news/tin/ChangeLog
+++ b/net-news/tin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-news/tin
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/tin/Attic/ChangeLog,v 1.7 2004/06/19 01:18:31 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/tin/Attic/ChangeLog,v 1.8 2004/06/19 01:58:20 swegener Exp $
+
+  19 Jun 2004; Sven Wegener <swegener@gentoo.org> tin-1.4.5.ebuild,
+  tin-1.6.0.ebuild:
+  Removed S=${WORKDIR}/${P}
 
   19 Jun 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml:
   Added metadata.xml
