--- a/net-news/yencode/ChangeLog
+++ b/net-news/yencode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-news/yencode
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/yencode/ChangeLog,v 1.8 2004/06/19 01:22:14 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/yencode/ChangeLog,v 1.9 2004/06/19 02:01:09 swegener Exp $
+
+  19 Jun 2004; Sven Wegener <swegener@gentoo.org> yencode-0.46.ebuild:
+  Added nls to IUSE
 
   19 Jun 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml:
   Added metadata.xml
