--- a/app-office/qhacc/ChangeLog
+++ b/app-office/qhacc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/qhacc
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/qhacc/Attic/ChangeLog,v 1.9 2004/05/04 22:40:04 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/qhacc/Attic/ChangeLog,v 1.10 2004/06/19 07:30:52 weeve Exp $
+
+  19 Jun 2004; Jason Wever <weeve@gentoo.org> qhacc-2.9.8.ebuild:
+  Stable on sparc.
 
   05 May 2004; Bryan Østergaard <kloeri@gentoo.org> qhacc-2.9.8.ebuild:
   Stable on alpha.
