--- a/dev-perl/Algorithm-Diff/ChangeLog
+++ b/dev-perl/Algorithm-Diff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Algorithm-Diff
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Algorithm-Diff/ChangeLog,v 1.3 2004/05/23 23:52:41 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Algorithm-Diff/ChangeLog,v 1.4 2004/06/19 07:41:23 weeve Exp $
+
+  19 Jun 2004; Jason Wever <weeve@gentoo.org> Algorithm-Diff-1.15.ebuild:
+  Stable on sparc.
 
   24 May 2004; Bryan Østergaard <kloeri@gentoo.org>
   Algorithm-Diff-1.15.ebuild:
