--- a/dev-tcltk/tclxml/ChangeLog
+++ b/dev-tcltk/tclxml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tclxml
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclxml/ChangeLog,v 1.7 2004/06/03 09:16:26 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclxml/ChangeLog,v 1.8 2004/06/19 08:10:51 weeve Exp $
+
+  19 Jun 2004; Jason Wever <weeve@gentoo.org> tclxml-2.4.ebuild:
+  Added ~sparc keyword.
 
   03 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> tclxml-2.4.ebuild:
   Stable on alpha.
