--- a/dev-lang/ruby/ChangeLog
+++ b/dev-lang/ruby/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/ruby
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.73 2004/06/19 10:08:25 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.74 2004/06/19 12:22:47 usata Exp $
+
+  19 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-1.8.1-r7.ebuild:
+  Fixed non-existent S
 
 *ruby-1.8.1-r7 (19 Jun 2004)
 
