--- a/media-sound/timemachine/ChangeLog
+++ b/media-sound/timemachine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/timemachine
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/timemachine/ChangeLog,v 1.2 2004/06/19 12:12:44 fvdpol Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/timemachine/ChangeLog,v 1.3 2004/06/19 13:04:04 dholm Exp $
+
+  19 Jun 2004; David Holm <dholm@gentoo.org> timemachine-0.2.4.ebuild:
+  Added to ~ppc.
 
   19 Jun 2004; Frank van de Pol <fvdpol@gentoo.org> timemachine-0.2.4.ebuild:
   Fixed src_install; now also includes 'COPYING' and 'ChangeLog'.
