--- a/net-analyzer/aimsniff/ChangeLog
+++ b/net-analyzer/aimsniff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/aimsniff
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/aimsniff/ChangeLog,v 1.6 2004/06/14 21:30:29 zhen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/aimsniff/ChangeLog,v 1.7 2004/06/19 13:10:51 dholm Exp $
+
+  19 Jun 2004; David Holm <dholm@gentoo.org> aimsniff-0.9.ebuild:
+  Added to ~ppc.
 
   14 Jun 2004; John Davis <zhen@gentoo.org> metadata.xml:
   removing myself as maintainer, I have no time
