--- a/dev-libs/libtasn1/ChangeLog
+++ b/dev-libs/libtasn1/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libtasn1
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.5 2004/06/03 16:53:45 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.6 2004/06/19 13:12:16 dholm Exp $
+
+  19 Jun 2004; David Holm <dholm@gentoo.org> libtasn1-0.2.6.ebuild:
+  Added to ~ppc.
 
   03 Jun 2004; Aron Griffis <agriffis@gentoo.org> libtasn1-0.2.5.ebuild,
   libtasn1-0.2.6.ebuild:
