--- a/x11-themes/fvwm-themes/ChangeLog
+++ b/x11-themes/fvwm-themes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/fvwm-themes
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/fvwm-themes/ChangeLog,v 1.5 2004/03/25 02:14:56 pyrania Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/fvwm-themes/ChangeLog,v 1.6 2004/06/19 13:36:02 pyrania Exp $
+
+  19 Jun 2004; <pyrania@gentoo.org> fvwm-themes-0.7.0.ebuild:
+  Stable on x86.
 
 *fvwm-themes-0.7.0 (25 Mar 2004)
 
