--- a/x11-plugins/gkrellmss/ChangeLog
+++ b/x11-plugins/gkrellmss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmss
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/gkrellmss/ChangeLog,v 1.8 2004/04/12 16:42:32 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/gkrellmss/ChangeLog,v 1.9 2004/06/19 13:40:40 pyrania Exp $
+
+  19 Jun 2004; <pyrania@gentoo.org> gkrellmss-2.4.ebuild:
+  Stable on x86.
 
   12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> gkrellmss-2.4.ebuild:
   Removing S=
