--- a/x11-misc/gwhere/ChangeLog
+++ b/x11-misc/gwhere/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/gwhere
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gwhere/Attic/ChangeLog,v 1.3 2004/03/06 01:44:56 pyrania Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gwhere/Attic/ChangeLog,v 1.4 2004/06/19 14:12:17 pyrania Exp $
+
+  19 Jun 2004; <pyrania@gentoo.org> gwhere-0.1.1.ebuild, gwhere-0.1.3.ebuild:
+  Removed default ${S}, stable on x86.
 
 *gwhere-0.1.3 (06 Mar 2004)
 
