--- a/net-misc/openswan/ChangeLog
+++ b/net-misc/openswan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/openswan
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openswan/ChangeLog,v 1.8 2004/06/19 13:39:12 pfeifer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openswan/ChangeLog,v 1.9 2004/06/19 14:54:49 dholm Exp $
+
+  19 Jun 2004; David Holm <dholm@gentoo.org> openswan-2.1.3.ebuild:
+  Added to ~ppc.
 
 *openswan-2.1.3 (19 Jun 2004)
 
