--- a/app-editors/xvile/ChangeLog
+++ b/app-editors/xvile/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/xvile
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/xvile/ChangeLog,v 1.7 2004/03/03 15:37:10 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/xvile/ChangeLog,v 1.8 2004/06/19 16:26:24 weeve Exp $
+
+  19 Jun 2004; Jason Wever <weeve@gentoo.org> xvile-9.4d.ebuild:
+  Stable on sparc.
 
 *xvile-9.4d (02 Mar 2004)
 
