--- a/dev-tcltk/tclxml-expat/ChangeLog
+++ b/dev-tcltk/tclxml-expat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tclxml-expat
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclxml-expat/Attic/ChangeLog,v 1.7 2004/06/03 09:17:41 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tclxml-expat/Attic/ChangeLog,v 1.8 2004/06/19 20:45:06 weeve Exp $
+
+  19 Jun 2004; Jason Wever <weeve@gentoo.org> tclxml-expat-2.4.ebuild:
+  Added ~sparc keyword.
 
   03 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> tclxml-expat-2.4.ebuild:
   Stable on alpha.
