--- a/dev-libs/libxml2/ChangeLog
+++ b/dev-libs/libxml2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxml2
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.80 2004/05/14 01:30:05 geoman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.81 2004/06/20 05:03:33 tgall Exp $
+
+  19 Jun 2004; Tom Gall <tgall@gentoo.org> libxml2-2.6.9.ebuild:
+  stable on ppc64, bug #54140
 
   13 May 2004; Stephen P. Becker <geoman@gentoo.org> libxml2-2.6.7.ebuild:
   Stable on mips.
