--- a/app-crypt/keynote/ChangeLog
+++ b/app-crypt/keynote/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/keynote
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/keynote/ChangeLog,v 1.2 2004/06/01 23:14:59 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/keynote/ChangeLog,v 1.3 2004/06/20 08:02:12 pyrania Exp $
+
+  20 Jun 2004; <pyrania@gentoo.org> keynote-2.3.ebuild:
+  Stable on x86.
 
   01 Jun 2004; Aron Griffis <agriffis@gentoo.org> keynote-2.3.ebuild:
   Fix use invocation
