--- a/app-i18n/scim-chinese/ChangeLog
+++ b/app-i18n/scim-chinese/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/scim-chinese
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-chinese/Attic/ChangeLog,v 1.11 2004/05/04 20:24:35 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-chinese/Attic/ChangeLog,v 1.12 2004/06/20 17:32:20 usata Exp $
+
+*scim-chinese-0.4.0 (21 Jun 2004)
+
+  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-chinese-0.4.0.ebuild:
+  Version bumped.
 
   04 May 2004; David Holm <dholm@gentoo.org> scim-chinese-0.3.0.ebuild:
   Added to ~ppc.
