--- a/net-irc/xchat-systray/ChangeLog
+++ b/net-irc/xchat-systray/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/xchat-systray
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/xchat-systray/Attic/ChangeLog,v 1.4 2004/01/11 00:41:56 pyrania Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/xchat-systray/Attic/ChangeLog,v 1.5 2004/06/21 01:04:47 swegener Exp $
+
+  21 Jun 2004; Sven Wegener <swegener@gentoo.org> xchat-systray-2.3.1.ebuild,
+  xchat-systray-2.4.0.ebuild:
+  Added IUSE=""
 
   11 Jan 2004; Markus Nigbur <pyrania@gentoo.org> xchat-systray-2.3.1.ebuild,
   xchat-systray-2.4.0.ebuild:
