--- a/media-libs/alsa-lib/ChangeLog
+++ b/media-libs/alsa-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.68 2004/06/19 11:15:16 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.69 2004/06/21 02:45:42 tgall Exp $
+
+  20 Jun 2004; Tom Gall <tgall@gentoo.org> alsa-lib-1.0.5:
+  stable on ppc64
 
 *alsa-lib-1.0.5-r1 (19 Jun 2004)
 
