--- a/dev-libs/libcdio/ChangeLog
+++ b/dev-libs/libcdio/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/libcdio
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcdio/ChangeLog,v 1.9 2004/03/18 20:52:45 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcdio/ChangeLog,v 1.10 2004/06/21 06:05:48 phosphan Exp $
+
+*libcdio-0.68 (21 Jun 2004)
+
+  21 Jun 2004; Patrick Kursawe <phosphan@gentoo.org> libcdio-0.64.ebuild,
+  libcdio-0.68.ebuild:
+  Replaced emake by make, einstall by make install, added DEPEND, added proper
+  libcddb support.
 
 *libcdio-0.66 (24 Feb 2004)
 
