--- a/sys-kernel/gentoo-dev-sources/ChangeLog
+++ b/sys-kernel/gentoo-dev-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/gentoo-dev-sources
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-dev-sources/Attic/ChangeLog,v 1.62 2004/06/18 23:22:06 gregkh Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-dev-sources/Attic/ChangeLog,v 1.63 2004/06/21 08:50:59 dsd Exp $
+
+  21 Jun 2004; Daniel Drake <dsd@gentoo.org> :
+  supermount readded to patchset
 
 *gentoo-dev-sources-2.6.7 (18 Jun 2004)
 
