--- a/sys-kernel/mm-sources/ChangeLog
+++ b/sys-kernel/mm-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.163 2004/06/14 20:56:45 lostlogic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.164 2004/06/21 12:10:52 voxus Exp $
+
+*mm-sources-2.6.7-r1 (21 Jun 2004)
+
+  21 Jun 2004; Konstantin Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.7-r1.ebuild:
+  Version bump.
 
 *mm-sources-2.6.7_rc3-r2 (14 Jun 2004)
 
