--- a/media-fonts/sazanami/ChangeLog
+++ b/media-fonts/sazanami/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-fonts/sazanami
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sazanami/ChangeLog,v 1.1 2004/06/21 07:18:05 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sazanami/ChangeLog,v 1.2 2004/06/21 16:27:38 usata Exp $
+
+*sazanami-20040621 (22 Jun 2004)
+
+  22 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +sazanami-20040621.ebuild:
+  Version bumped.
 
 *sazanami-20040618 (21 Jun 2004)
 
