--- a/sys-kernel/gentoo-dev-sources/ChangeLog
+++ b/sys-kernel/gentoo-dev-sources/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for sys-kernel/gentoo-dev-sources
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-dev-sources/Attic/ChangeLog,v 1.63 2004/06/21 08:50:59 dsd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-dev-sources/Attic/ChangeLog,v 1.64 2004/06/21 17:18:31 dsd Exp $
 
-  21 Jun 2004; Daniel Drake <dsd@gentoo.org> :
+*gentoo-dev-sources-2.6.7-r1 (21 Jun 2004)
+
+  21 Jun 2004; Daniel Drake <dsd@gentoo.org>
+  +gentoo-dev-sources-2.6.7-r1.ebuild:
   supermount readded to patchset
 
 *gentoo-dev-sources-2.6.7 (18 Jun 2004)
