--- a/app-i18n/skktools/ChangeLog
+++ b/app-i18n/skktools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/skktools
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/skktools/Attic/ChangeLog,v 1.2 2004/05/02 11:00:06 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/skktools/Attic/ChangeLog,v 1.3 2004/06/21 17:24:54 usata Exp $
+
+  22 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> skktools-1.1.ebuild:
+  Marked as stable.
 
   02 May 2004; David Holm <dholm@gentoo.org> skktools-1.1.ebuild:
   Added to ~ppc.
