--- a/games-strategy/wesnoth/ChangeLog
+++ b/games-strategy/wesnoth/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.28 2004/06/12 01:24:21 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.29 2004/06/21 17:52:25 mr_bones_ Exp $
+
+*wesnoth-0.7.10 (21 Jun 2004)
+
+  21 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-0.7.10.ebuild:
+  version bump
 
   11 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-0.7.6.ebuild,
   wesnoth-0.7.7.ebuild:
