--- a/net-im/skype/ChangeLog
+++ b/net-im/skype/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/skype
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/skype/ChangeLog,v 1.2 2004/06/22 11:29:32 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/skype/ChangeLog,v 1.3 2004/06/22 16:06:15 humpback Exp $
+
+  22 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
+  skype-0.90.0.3.ebuild, files/artsskype:
+  Small fixes in usahe of use vars :) .
 
   22 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
   skype-0.90.0.3.ebuild, files/artsskype:
