--- a/net-news/slrn/ChangeLog
+++ b/net-news/slrn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-news/slrn
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/slrn/Attic/ChangeLog,v 1.19 2004/06/22 09:41:41 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/slrn/Attic/ChangeLog,v 1.20 2004/06/22 17:19:44 gustavoz Exp $
+
+  22 Jun 2004; Gustavo Zacarias <gustavoz@gentoo.org> slrn-0.9.8.0-r1.ebuild:
+  Keyworded ~sparc wrt #54351
 
   22 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> slrn-0.9.8.0-r1.ebuild:
   Add ~alpha, bug #54351.
