--- a/app-editors/gvim/ChangeLog
+++ b/app-editors/gvim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.83 2004/06/21 00:07:48 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.84 2004/06/22 21:38:51 gustavoz Exp $
+
+  22 Jun 2004; Gustavo Zacarias <gustavoz@gentoo.org> gvim-6.3.ebuild:
+  Stable on hppa
 
   20 Jun 2004; Aron Griffis <agriffis@gentoo.org> gvim-6.3.ebuild:
   Stable on alpha and ia64
